--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4287,12 +4287,10 @@ text-align: left;
     font-size: 2.2rem;
   }
   .benefit-section p {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 margin-bottom: 20px;
   }
-  
 		
-}
 
 /* Whats Next Section */
 .whatnext-section {
@@ -4340,6 +4338,15 @@ text-align: center;
   margin-bottom: 40px;
 }
 
+@media screen and (max-width: 768px) {
+  .whatnext-section h1 {
+    font-size: 2.2rem;
+  }
+  .whatnext-section p {
+    font-size: 1.2rem;
+margin-bottom: 20px;
+  }
+
 /* Sec Section */
 .sec-section {
   background: #2b2f55;
@@ -4377,8 +4384,16 @@ text-align: left;
   color: #ffffff;
   margin-bottom: 40px;
 }
-
-/* Help Section */
+  @media screen and (max-width: 768px) {
+  .sec-section h1 {
+    font-size: 2.2rem;
+  }
+  .sec-section p {
+    font-size: 1.2rem;
+margin-bottom: 20px;
+  }
+		
+	/* Help Section */
 .help-section {
   position: relative;
   background: #22243d;
@@ -4422,25 +4437,15 @@ text-align: left;
   color: #ffffff;
   margin-bottom: 40px;
 }
-
-
-/* benefit Animations */
-@keyframes fadeInbenefit {
-  0% { opacity: 0; transform: translateY(30px); }
-  100% { opacity: 1; transform: translateY(0); }
-}
-
 @media screen and (max-width: 768px) {
-  .benefit-section h1 {
+  .help-section h1 {
     font-size: 2.2rem;
   }
-  .benefit-section p {
-    font-size: 1.5rem;
-margin-bottom: 5px;
+  .help-section p {
+    font-size: 1.2rem;
+margin-bottom: 20px;
   }
-  
-	
-
+		
 /* XLarge */
 
 	@media screen and (max-width: 1680px) {
