--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4290,6 +4290,7 @@ text-align: left;
     font-size: 1.2rem;
 margin-bottom: 20px;
   }
+		}
 		
 
 /* Whats Next Section */
@@ -4346,7 +4347,7 @@ text-align: center;
     font-size: 1.2rem;
 margin-bottom: 20px;
   }
-
+}
 /* Sec Section */
 .sec-section {
   background: #2b2f55;
@@ -4392,6 +4393,7 @@ text-align: left;
     font-size: 1.2rem;
 margin-bottom: 20px;
   }
+		}
 		
 	/* Help Section */
 .help-section {
@@ -4445,6 +4447,7 @@ text-align: left;
     font-size: 1.2rem;
 margin-bottom: 20px;
   }
+		}
 		
 /* XLarge */
 
