--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3585,7 +3585,16 @@ nav a:hover::after {
  text-align: left;
   margin-bottom: 20px;
 }
-
+@media screen and (max-width: 768px) {
+  .siaconnect-access-section h1 {
+    font-size: 2.2rem;
+  }
+  .siaconnect-access-section p {
+    font-size: 1.2rem;
+margin-bottom: 20px;
+  }
+		}
+		
 /* SVG animation overlay */
 .siaconnect-svg-bg {
   position: absolute;
