--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3268,7 +3268,7 @@ input, select, textarea {
 		-ms-transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
 		transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
 		color: #ffffff;
-		position: relative;
+		position: absolute;
 		width: auto;
 		padding: .2em;
 		background-color: #111987;
