--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3370,6 +3370,17 @@ input, select, textarea {
 				}
 				
 /* Fancy Hover Glow for Nav Links */
+.fixed-nav-bar { 
+	position: fixed; 
+	top: 0; 
+	left: 0; 
+	z-index: 9999; 
+	width: 100%; 
+	height: 50px; 
+	background-color: #00a087; 
+	transition: color 0.3s ease;
+}
+
 nav a {
   font-size: 1rem;
   margin: 5px 15px;
