--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3398,13 +3398,13 @@ input, select, textarea {
 	left: 0; 
 	z-index: 9999; 
 	width: 100%;  
-	background-color: #00a087; 
+	background-color: #111987; 
 	transition: color 0.3s ease;
 }
 
 .fixed-nav-bar a {
   font-size: 1rem;
-  margin: 5px 15px;
+  margin: 2px 5px;
   padding: 1px 0;
   color: #ffffff;
   text-decoration: none;
