--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3392,6 +3392,7 @@ input, select, textarea {
 	position: fixed; 
 	top: 0; 
 	left: 0; 
+	padding: .2em;
 	z-index: 9999; 
 	width: 100%;  
 	background-color: #111987; 
