--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3391,8 +3391,7 @@ input, select, textarea {
 .fixed-nav-bar { 
 	position: fixed; 
 	top: 0; 
-	left: 0; 
-	padding: .2em;
+	padding: 2px 0;
 	z-index: 9999; 
 	width: 100%;  
 	background-color: #111987; 
@@ -3432,6 +3431,7 @@ input, select, textarea {
   .fixed-nav-bar {
     display: fixed;
     flex-wrap: wrap;
+				padding: 2px 0;
 				color: #ffffff;
     justify-content: center;
 
