--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3396,7 +3396,7 @@ input, select, textarea {
 		border-top-left-radius: 0em;
 		border-top-right-radius: 0em;
 		cursor: default;
-		text-align: center;
+		text-align: left;
 	z-index: 9999; 
 	width: 100%; 
 }
