--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3331,18 +3331,24 @@ body > main {
   transform-origin: left;
 }
 
-@media screen and (max-width: 736px) {
-  #nav ul {
+@media screen and (max-width: 768px) {
+  nav ul {
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    gap: 12px;
+    padding: 20px;
   }
 
-  #nav ul li {
-    margin: 0.5em 0;
+  nav li {
+    display: block;
+    width: 100%;
+    text-align: left;
   }
 
-  #nav + #main {
-    padding-top: 5.5em;
+  nav a {
+    display: block;
+    padding: 10px 0;
+    font-size: 1rem;
   }
 }
 
