--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3277,7 +3277,7 @@ input, select, textarea {
  /* Add top padding to main content to prevent overlap */
  nav + #main,
  body > main {
-   padding-top: 4.25em;
+   padding-top: 2.25em;
  }
  
  
@@ -3285,7 +3285,7 @@ input, select, textarea {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
-   gap: 32px;
+   gap: 12px;
    list-style: none;
    padding: 0;
    margin: 0;
@@ -3339,17 +3339,17 @@ input, select, textarea {
  
 @media screen and (max-width: 768px) {
    nav ul {
-     flex-direction: block;
+     flex-direction: block
+					;
      align-items: flex-start;
-     gap: 12px;
-     padding: 20px;
+     gap: 4px;
+     padding: 10px;
    }
  
    nav li {
      display: block;
      width: 100%;
-     text-align: left;
-     flex-direction: column;
+     text-align: left;;
      align-items: center;
      gap: 20px;
    }
