--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3261,7 +3261,7 @@ input, select, textarea {
 	
 /* Fixed Top Nav */
  #nav {
-   position: fixed;
+   position: relative;
    top: 0;
    left: 0;
    width: 100%;
