--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4028,7 +4028,7 @@ table.comparison-table th:last-child {
   position: fixed;
   bottom: 30px;
   right: 30px;
-  background-color: #0050b6;
+  background-color: #111987;
   color: #ffffff;
   font-size: 24px;
   padding: 10px 14px;
