--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3270,7 +3270,7 @@ input, select, textarea {
 		color: #ffffff;
 		position: relative;
 		width: auto;
-		padding: 12em;
+		padding: .2em;
 		border-top-left-radius: 0em;
 		border-top-right-radius: 0em;
 		cursor: default;
