--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3271,7 +3271,6 @@ input, select, textarea {
 		position: relative;
 		width: auto;
 		padding: .2em;
-		padding-right: 12px;
 		border-top-left-radius: 0em;
 		border-top-right-radius: 0em;
 		cursor: default;
@@ -3283,6 +3282,11 @@ input, select, textarea {
 			color: #636363;
 		}
 
+
+		#nav a {
+			color: ffffff;
+			padding-right: 12px;
+		}
 		#nav a:hover {
 			color: #003b9f;
 		}
